<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorTheme"
        android:paddingLeft="10dp"
        android:paddingTop="5dp"
        android:paddingRight="10dp"
        android:paddingBottom="5dp">

        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:adjustViewBounds="true"
            android:contentDescription="@string/back_description"
            android:src="@mipmap/icon_back" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/show_pdf"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_load_pdf_by_io"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorPrimary"
        android:text="@string/load_pdf_by_io" />

    <Button
        android:id="@+id/btn_load_pdf_by_download"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorAccent"
        android:text="@string/load_pdf_by_download" />

    <Button
        android:id="@+id/btn_load_pdf_by_asset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:background="@color/colorPrimary"
        android:text="@string/load_pdf_by_asset" />
</LinearLayout>